; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_semaphore.c_radeon_semaphore_emit_wait.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_semaphore.c_radeon_semaphore_emit_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32* }
%struct.radeon_semaphore = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radeon_semaphore_emit_wait(%struct.radeon_device* %0, i32 %1, %struct.radeon_semaphore* %2) #0 {
  %4 = alloca %struct.radeon_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.radeon_semaphore*, align 8
  store %struct.radeon_device* %0, %struct.radeon_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.radeon_semaphore* %2, %struct.radeon_semaphore** %6, align 8
  %7 = load %struct.radeon_semaphore*, %struct.radeon_semaphore** %6, align 8
  %8 = getelementptr inbounds %struct.radeon_semaphore, %struct.radeon_semaphore* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* %8, align 4
  %11 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %14 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load %struct.radeon_semaphore*, %struct.radeon_semaphore** %6, align 8
  %20 = call i32 @radeon_semaphore_ring_emit(%struct.radeon_device* %11, i32 %12, i32* %18, %struct.radeon_semaphore* %19, i32 1)
  ret void
}

declare dso_local i32 @radeon_semaphore_ring_emit(%struct.radeon_device*, i32, i32*, %struct.radeon_semaphore*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
